--- a/style.css
+++ b/style.css
@@ -358,7 +358,10 @@ nav .fa-solid{
 @media only screen and (max-width:600px) {
   #header{
     background-image: url(images/phone2.jpg);
-  
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 100%; /* Or specify a fixed height */
+    width: 100%;
   }
   .header-text{
     margin-top: 100%;
